# company_name

./: .gitignore  main.py  pyproject.toml  requirements.txt
test/: 104.py  archi.py  findcompany.py  google_search.py  google_search_2.py  read_.py  twincn.py  zhupiter.py
