[tool.poetry]
name = "company-name"
version = "0.1.0"
description = ""
authors = ["JackXu19930319 <49975224+JackXu19930319@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "company_name"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
bs4 = "^0.0.1"
tqdm = "^4.66.1"
faker = "^20.1.0"
requests-html = "^0.10.0"
googlesearch-python = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
